--- a/package.json
+++ b/package.json
@@ -6,22 +6,29 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/axios": "0.14.0",
+    "@types/jest": "26.0.10",
     "@types/node": "14.0.23",
     "@types/uuid": "8.0.0",
-    "@typescript-eslint/eslint-plugin": "3.6.1",
-    "@typescript-eslint/parser": "3.6.1",
-    "eslint": "7.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "eslint": "^7.7.0",
     "eslint-config-prettier": "6.11.0",
-    "eslint-config-standard": "14.1.1",
-    "eslint-plugin-import": "2.22.0",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-standard": "4.0.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "26.4.2",
     "prettier": "2.0.5",
+    "ts-jest": "26.2.0",
     "ts-node": "8.10.2",
     "typescript": "3.9.6"
   },
   "dependencies": {
+    "aws-sdk": "^2.739.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
