--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "backend:test": "yarn workspace backend run test",
-    "ci:test": "yarn workspace backend run ci:test"
+    "ci:test": "yarn workspace backend run ci:test",
+    "deploy": "yarn workspace backend run build && yarn workspace aws run deploy"
   }
 }
