🚨 ESLint設定を変更する

--- a/packages/backend/docker-compose.yml
+++ b/packages/backend/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     image: amazon/dynamodb-local:latest
     container_name: dynamodb-local
     ports:
-      - "8000:8000"
-    command: "-jar DynamoDBLocal.jar -sharedDb"
+      - '8000:8000'
+    command: '-jar DynamoDBLocal.jar -sharedDb'
