--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "jest": "26.4.2",
+    "npm-run-all": "4.1.5",
     "prettier": "2.0.5",
     "ts-jest": "26.2.0",
     "ts-node": "8.10.2",
@@ -35,6 +36,9 @@
   "scripts": {
     "test": "jest --watch",
     "build": "tsc",
-    "ci:test": "jest"
+    "ci:test": "jest",
+    "format": "run-s format:eslint format:prettier",
+    "format:eslint": "eslint --fix .",
+    "format:prettier": "prettier --write ."
   }
 }
